# make-report-easy

./: .gitignore  .pre-commit-config.yaml  abstract_sheets.py  base_sheets.py  main.py  pyproject.toml  sheets.py
Metrics/: quantitative_metrics.py
Sheet/: __init__.py  base_sheets.py  sheets.py
Sheet/utils/: is_list_numeric.py  is_list_string.py
utils/: __init__.py
