[project]
name = "make-report-easy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ipdb>=0.13.13",
    "black>=25.9.0",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
]
